<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F5F5">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tollbar"
        android:layout_width="390dp"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/exit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text="@string/Close"
        android:textColor="#EB8042"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/mobnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tollbar"
        android:layout_margin="16dp"
        android:text="@string/num1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#737373"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/mobnumber"
        android:text="@string/info1"/>
    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите номер телефона"
        android:textColorHint="#000000"
        android:alpha="0.38"
        android:background="@drawable/background_edit"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text1"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="60dp"
        android:theme="@style/CheckboxOrange"
        app:layout_constraintStart_toStartOf="@+id/number1"
        app:layout_constraintTop_toBottomOf="@+id/number1"/>

    <TextView
        android:id="@+id/textUsl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="46dp"
        android:checked="false"
        android:text="@string/Uslovie"
        android:textColor="#424242"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkbox"
        app:layout_constraintTop_toTopOf="@+id/checkbox" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/background_buttion"
        android:layout_marginEnd="16dp"
        android:text="Продолжить"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/textUsl"/>




</androidx.constraintlayout.widget.ConstraintLayout>