<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/txt_main"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="#F5F5F5"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:cardElevation="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/box1"
                android:layout_width="match_parent"
                android:layout_height="338dp">

                <TextView
                    android:id="@+id/txt_sent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/txt_sent"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/box1"
                    app:layout_constraintStart_toStartOf="@id/box1"
                    app:layout_constraintTop_toTopOf="@id/box1" />

                <ImageView
                    android:id="@+id/humo_image"
                    android:layout_width="216dp"
                    android:layout_height="216dp"
                    android:src="@drawable/humo2"
                    app:layout_constraintEnd_toEndOf="@id/txt_sent"
                    app:layout_constraintStart_toStartOf="@id/txt_sent"
                    app:layout_constraintTop_toBottomOf="@id/txt_sent" />

                <TextView
                    android:id="@+id/sentm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_orange"
                    android:gravity="center"
                    android:paddingStart="28dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="28dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sent_m"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humo_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardV3"
            android:layout_width="0dp"
            app:cardElevation="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@id/cardV1"
            app:layout_constraintStart_toStartOf="@id/cardV1"
            app:layout_constraintTop_toBottomOf="@id/cardV1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/block2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/humo_image2"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/bell"
                    app:layout_constraintStart_toStartOf="@id/block2"
                    app:layout_constraintTop_toTopOf="@id/block2" />

                <TextView
                    android:id="@+id/txt_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/av_upd"
                    android:textColor="#171717"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    app:layout_constraintStart_toEndOf="@id/humo_image2"
                    app:layout_constraintTop_toTopOf="@id/humo_image2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/new_facilities"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/block2"
                    app:layout_constraintStart_toStartOf="@id/txt_update"
                    app:layout_constraintTop_toBottomOf="@id/txt_update" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardV4"
        android:layout_width="0dp"
        app:cardElevation="0dp"
        android:layout_height="176dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@id/cardV3"
        app:layout_constraintStart_toStartOf="@id/cardV3"
        app:layout_constraintTop_toBottomOf="@id/cardV3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/block3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/popular_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pop_countries"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/block3"
                app:layout_constraintStart_toStartOf="@id/block3"
                app:layout_constraintTop_toTopOf="@id/block3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popular_country" />

            </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/exitBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="27dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardV4"
                app:layout_constraintStart_toStartOf="@+id/cardV4"
                app:layout_constraintTop_toBottomOf="@+id/cardV4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/box2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/exit"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/exit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/box2"
                        app:layout_constraintTop_toTopOf="@+id/box2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="78dp"
                        android:padding="8dp"
                        android:text="Выйти"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/exit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/exit"
                        app:layout_constraintTop_toTopOf="@+id/exit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>